--- a/peer/index.html
+++ b/peer/index.html
@@ -139,8 +139,8 @@
               .pill.selected{background:var(--blue); color:#fff}
 
               /* SCORE */
-              .score-kicker{font-size:11pt; font-weight:400; color:#808080; margin:12px 0 8px 0}
-              .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
+              .score-kicker{font-size:11pt; font-weight:400; color:#666666; margin:12px 0 8px 0}
+              .score-big{font-size:20pt; font-weight:900; color:#666666; margin:0 0 24px 0}
               .gauge{position:relative; height:28px; border-radius:8px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
               .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
 
@@ -175,7 +175,7 @@
                 .pdf-top{display:grid; grid-template-columns: 1fr 220px; gap:16px; align-items:start; margin-bottom:10px}
                 .pdf-title{font-size:45px; font-weight:1000; color:var(--blue); margin:0}
                 .pdf-sub { font-size:30px; font-weight:600; color:var(--blue); margin:2px 0; line-height:1.2; text-align:left; }
-                .pdf-date { font-size:18px; font-weight:500; color:var(--blue); margin:2px 0; line-height:1.2; text-align:left; }
+                .pdf-date { font-size:15px; font-weight:450; color:var(--blue); margin:2px 0; line-height:1.2; text-align:left; }
                 .pdf-divider{height:1px; background:#cfd4dc; margin:8px 0 14px 0}
 
                 /* ====== SCORE BOX (SAFE TO EDIT) ====== */
@@ -216,7 +216,7 @@
                 .st-title{font-weight:800}
               }
 
-              .rec-text{font-size:10pt; font-weight:450; color:#666666; margin-top:24px; line-height:1.6;}
+              .rec-text{font-size:9pt; font-weight:450; color:#666666; margin-top:16px; line-height:1.8;}
 
               .group-results-header{font-size:18pt; font-weight:800; color:#444; margin-bottom:8px;}
 
@@ -776,7 +776,7 @@ button:disabled,
             <section id="finish" style="display: none;">
                 <h2 class="visually-hidden">Overall Score</h2>
                 <div class="score-section">
-                    <div class="score-kicker">self-assessment score</div>
+                    <div class="score-kicker">peer reviewer score</div>
                     <div class="score-big" id="scorePercent">OVERALL SCORE —%</div>
                     <div class="gauge" id="gauge"></div>
                     <div class="rec-kicker"></div>
@@ -1891,7 +1891,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <!-- Custom "Are you sure?" confirmation modal (white, left text, right buttons) v4 (peer) -->
 <div id="confirmModal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle" aria-describedby="confirmText">
   <div class="modal-box">
-    <div id="confirmTitle" class="title">you want to submit your scores?</div>
+    <div id="confirmTitle" class="title">want to submit your scores?</div>
     <div id="confirmText" class="text">after you submit your review scores will be automatically saved.</div>
     <div class="actions">
       <button id="cancelConfirm" class="btn-cancel" type="button">No</button>
