--- a/peer/index.html
+++ b/peer/index.html
@@ -140,7 +140,7 @@
 
               /* SCORE */
               .score-kicker{font-size:11pt; font-weight:400; color:#666666; margin:12px 0 8px 0}
-              .score-big{font-size:20pt; font-weight:900; color:#666666; margin:0 0 24px 0}
+              .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
               .gauge{position:relative; height:28px; border-radius:8px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
               .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
 
@@ -216,7 +216,7 @@
                 .st-title{font-weight:800}
               }
 
-              .rec-text{font-size:9pt; font-weight:450; color:#666666; margin-top:16px; line-height:1.8;}
+              .rec-text{font-size:9pt; font-weight:400; color:#666666; margin-top:30px; line-height:1.8;}
 
               .group-results-header{font-size:18pt; font-weight:800; color:#444; margin-bottom:8px;}
 
@@ -722,7 +722,7 @@ button:disabled,
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">before you start</h2>
                 <p class="intro">
-                You will get 35 statements. Read each statement and think about how the team member acts in these situations. Then give a score from 1 to 5. Be honest and sincere. This app is a mirror to show team members what they're good at and what they can do better
+                You will get 35 statements. Read each statement and think about how the team member acts in these situations. Then give a score from 1 to 5. Be honest and sincere. This app is a mirror to show members what they're good at and what they can do better
                 </p>
                 <h2 class="section-title">about the scoring</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
