--- a/team/index.html
+++ b/team/index.html
@@ -811,15 +811,15 @@ button:disabled,
   <div style="margin-top:10px;">
     <div class="step">
       <span class="number-circle">1</span>
-      <span>Your scores are recorded</span>
+      <span>your assessment scores are recorded</span>
     </div>
     <div class="step">
       <span class="number-circle">2</span>
-      <span>Click PDF to download the report</span>
+      <span>click PDF to download your full report</span>
     </div>
     <div class="step">
       <span class="number-circle">3</span>
-      <span>Ask your peer to review you</span>
+      <span>please invite your peer to review you</span>
     </div>
   </div>
 </div>
@@ -1130,7 +1130,7 @@ button:disabled,
                     markerStyle.textContent = ".gauge::after{left: calc(var(--marker) - 5px);}";
                     let rec = "";
                     if(totals.pct < 50) rec = `This score suggests that you are behind. You need to develop yourself, learn more about BED, and focus more on the job. Observe others but don’t copy them. You need to find your own identity. Set a few personal goals each week and ask the team to evaluate your progress. Contact your coach for advice`;
-                    else if(totals.pct < 70) rec = `This score suggests that you are taking your job too easy. You are playing in the Premier League. You need to develop yourself. Be more aware of your actions and practice.  Be more proactive and push yourself to become an equal member of the team. Ask your team for suggestions and feedback and then ask yourself: did I do things different today?`;
+                    else if(totals.pct < 70) rec = `This score suggests that you are taking your job too easy. You are playing in the Premier League. You need to develop yourself. Be more aware of your actions and practice.  Be more proactive and push yourself to become an equal member of the team. Ask your team for suggestions and feedback and then ask yourself this: did I do things different then yesterday?`;
                     else if(totals.pct < 90) rec = `This score shows that you have great hospitality competencies. You can clearly read people and situations. But it’s important to keep challenging yourself. Use BED to learn new things. Contribute to BED 2.0 and actively help your team members by giving honest and positive feedback`;
                     else rec = `This score shows you truly understand BED. You care for people, hotel and organization and understand the meaning of Shared Leadership. Continue to lead others by example. Use your leadership strengths to grow in the organization and take an executive role in shaping BED 2.0. You are ready for the next level`;
                     document.getElementById("recText").innerHTML = rec;
@@ -1891,8 +1891,8 @@ document.addEventListener('DOMContentLoaded', () => {
 <!-- Custom "Are you sure?" confirmation modal (white, left text, right buttons) v4 -->
 <div id="confirmModal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle" aria-describedby="confirmText">
   <div class="modal-box">
-    <div id="confirmTitle" class="title">you want to submit now?</div>
-    <div id="confirmText" class="text">Your assessment scores will be automatically saved.</div>
+    <div id="confirmTitle" class="title">want to submit now?</div>
+    <div id="confirmText" class="text">your self-assessment scores will be automatically saved</div>
     <div class="actions">
       <button id="cancelConfirm" class="btn-cancel" type="button">No</button>
       <button id="okConfirm" class="btn-ok" type="button">Yes</button>
