--- a/team/index.html
+++ b/team/index.html
@@ -139,7 +139,7 @@
               .pill.selected{background:var(--blue); color:#fff}
 
               /* SCORE */
-              .score-kicker{font-size:11pt; font-weight:400; color:#808080; margin:12px 0 8px 0}
+              .score-kicker{font-size:11pt; font-weight:400; color:#666666; margin:12px 0 8px 0}
               .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
               .gauge{position:relative; height:28px; border-radius:8px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
               .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
@@ -216,7 +216,7 @@
                 .st-title{font-weight:800}
               }
 
-              .rec-text{font-size:10pt; font-weight:450; color:#666666; margin-top:24px; line-height:1.6;}
+              .rec-text{font-size:9pt; font-weight:400; color:#666666; margin-top:24px; line-height:1.6;}
 
               .group-results-header{font-size:18pt; font-weight:800; color:#444; margin-bottom:8px;}
 
@@ -674,7 +674,7 @@ button:disabled,
             <div class="progress" id="progressHeader"><span class="dot"></span><span class="dot"></span><span class="dot"></span> <span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             <!-- PAGE 1 -->
             <section id="welcome">
-                <h2 class="section-title">team member information</h2>
+                <h2 class="section-title">team member</h2>
                 <div class="row"><label for="nick">name</label><input id="nick"  placeholder="your name"></div>
                <div class="row">
   <label for="email">email</label>
@@ -698,7 +698,7 @@ button:disabled,
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">peer reviewer information</h2>
+                <h2 class="section-title">peer reviewer</h2>
                 <p class="intro">After you assess yourself a friend will review you. You can ask anyone in your team who knows you well and worked in BED for at least 12 months</p>
                 <div class="row"><label for="peerName">name</label><input id="peerName"  placeholder="peer reviewer name"></div>
                 <div class="row"><label for="peerEmail">email</label><input id="peerEmail" type="email"  placeholder="peer reviewer email"></div>
@@ -815,11 +815,11 @@ button:disabled,
     </div>
     <div class="step">
       <span class="number-circle">2</span>
-      <span>click PDF to download your full report</span>
+      <span>click PDF to download the full report</span>
     </div>
     <div class="step">
       <span class="number-circle">3</span>
-      <span>please invite your peer to review you</span>
+      <span>please ask your peer to review you</span>
     </div>
   </div>
 </div>
