--- a/index.html
+++ b/index.html
@@ -1,123 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BED HOSPITALITY 2.0</title>
+  <title>BED Hospitality 2.0</title>
+
+  <!-- ✅ PWA Setup -->
+  <link rel="manifest" href="icons/manifest.webmanifest">
+  <meta name="theme-color" content="#1E90FF">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
+
+  <!-- ✅ Styling -->
   <style>
-    :root{
-      --text-dark:#434343;
-      --brand-blue:#1E90FF;
-      --muted:#999999;
-      --card-bg:#ffffff;
-      --page-bg:#f5f5f5;
+    body {
+      font-family: system-ui, Arial, sans-serif;
+      background: #ffffff;
+      color: #1E90FF;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-    *{box-sizing:border-box}
-    body{
-      margin:0; background:var(--page-bg); color:var(--text-dark);
-      font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    main {
+      padding: 80px 20px;
     }
-
-    .wrap{max-width:720px; margin:40px auto; padding:0 16px}
-    .card{
-      background:var(--card-bg);
-      border-radius:24px; /* round all corners */
-      box-shadow:0 8px 24px rgba(0,0,0,.08);
-      padding:28px 24px;
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+      font-weight: 800;
     }
-
-    /* Header sizes */
-    h1{
-      margin:0 0 6px 0;
-      font-weight:900;
-      font-size:28px;
-      line-height:1.1;
-      color:#666666;
-      word-break:break-word; /* ensures no overflow */
+    p {
+      color: #444;
+      font-size: 16px;
+      margin-top: 0;
     }
-    .subhead{
-      margin:0 0 20px 0;
-      font-weight:800;
-      text-transform:uppercase;
-      font-size:20px;
-      color:#666666;
+    a.button {
+      display: inline-block;
+      margin: 20px 10px;
+      padding: 14px 28px;
+      background: #1E90FF;
+      color: #fff;
+      border-radius: 14px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: background 0.3s ease;
+    }
+    a.button:hover {
+      background: #187bdb;
     }
 
-    /* Buttons */
-    .btn{
-      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
-      width:100%; border-radius:20px; cursor:pointer; display:block;
-      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
-      margin:14px 0; padding:16px 18px;
+    /* ✅ Install message box */
+    #installMsg {
+      display: none;
+      background: #1E90FF;
+      color: #fff;
+      padding: 18px 24px;
+      border-radius: 18px;
+      width: 90%;
+      max-width: 420px;
+      margin: 40px auto 0;
+      text-align: center;
+      font-size: 15px;
+      line-height: 1.5;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      animation: fadeIn 0.5s ease-in-out;
     }
-    .btn:hover{border-color:var(--brand-blue)}
-    .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
-    .btn:active{transform:scale(.997)}
 
-    .btn-grid{
-      display:grid; grid-template-columns:auto 1fr; gap:10px; align-items:center;
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(10px);}
+      to {opacity: 1; transform: translateY(0);}
     }
-    .title{font-weight:700; font-size:18px; line-height:1.2; text-align:left}
-    .subtitle{font-size:14px; color:#666666; margin-top:3px; line-height:1.2; text-align:left}
-
-    /* Prominent icons */
-    .icon{
-      width:50px; height:50px; flex:none; border-radius:12px; background:var(--brand-blue);
-      display:inline-block;
-    }
-    .icon svg{width:100%; height:100%}
   </style>
 </head>
+
 <body>
-  <main class="wrap">
-    <section class="card" role="region" aria-labelledby="title">
-      <h1 id="title">BED HOSPITALITY 2.0</h1>
-      <div class="subhead">Self Assessment Form</div>
+  <main>
+    <h1>BED Hospitality 2.0</h1>
+    <p>Select how you want to begin:</p>
 
-      <div class="intro">
-  <p style="font-size:14px;color:#666666;font-weight:420;">
-    BED 2.0 will change but our foundation of care, shared responsibility, passion and common sense will always be the same. The goal of this app is to remind ourselves about the things that make BED special so we can develop ourselves and others
-  </p>
-</div>
-      
-      <!-- Button 1: Team (single person) -->
-      <button class="btn" onclick="location.href='./team/';"
-        aria-label="I am a team member. I want to assess myself.">
-        <div class="btn-grid">
-          <span class="icon" aria-hidden="true">
-            <svg viewBox="0 0 48 48" fill="none">
-              <circle cx="24" cy="16" r="9" fill="#ffffff"/>
-              <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff" opacity=".9"/>
-            </svg>
-          </span>
-          <div>
-            <div class="title">I am a team member</div>
-            <div class="subtitle">I want to assess myself</div>
-          </div>
-        </div>
-      </button>
+    <a class="button" href="team/index.html">Team Member Form</a>
+    <a class="button" href="peer/index.html">Peer Review Form</a>
 
-      <!-- Button 2: Peer (two persons simplified) -->
-      <button class="btn" onclick="location.href='./peer/';"
-        aria-label="I am a peer reviewer. I want to review my friend.">
-        <div class="btn-grid">
-          <span class="icon" aria-hidden="true">
-            <svg viewBox="0 0 48 48" fill="none">
-              <!-- left person -->
-              <circle cx="18" cy="18" r="7" fill="#ffffff"/>
-              <!-- right person -->
-              <circle cx="30" cy="18" r="7" fill="#ffffff" opacity="0.95"/>
-              <!-- base (shared shoulders) -->
-              <path d="M10 38c0-7 6-12 12-12s12 5 12 12" fill="#ffffff" opacity="0.9"/>
-            </svg>
-          </span>
-          <div>
-            <div class="title">I am a peer reviewer</div>
-            <div class="subtitle">I want to review my friend</div>
-          </div>
-        </div>
-      </button>
-    </section>
+    <!-- ✅ Install message (shows only when app is installable) -->
+    <div id="installMsg">
+      You can add this app to your home screen.<br>
+      It will save your progress so you can continue anytime.
+    </div>
   </main>
+
+  <!-- ✅ Register Service Worker -->
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker
+        .register("/bed/service-worker.js")
+        .then(() => console.log("Service Worker registered successfully."))
+        .catch(err => console.log("Service Worker registration failed:", err));
+    }
+
+    // ✅ Show message only when app can be installed
+    let deferredPrompt;
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      document.getElementById('installMsg').style.display = 'block';
+    });
+  </script>
 </body>
 </html>
