--- a/peer/index.html
+++ b/peer/index.html
@@ -665,6 +665,11 @@ button:disabled,
   margin-top: 20px !important;            /* adds one blank line above */
 }
 </style>
+<!-- PWA support -->
+<link rel="manifest" href="../icons/manifest.webmanifest">
+<link rel="icon" sizes="192x192" href="../icons/icon-192.png">
+<meta name="theme-color" content="#1E90FF">
+<script defer src="../install.js"></script>
 
 </head>
     <body>
