--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
         This app reminds us about the things that make BED special. By looking in this mirror we can grow ourselves and help each other.
       </p>
 
-      <!-- Team -->
-      <button class="btn" onclick="location.href='./team/';">
-        <div class="btn-grid">
-          <img class="icon" src="./icons/team.png" alt="Team member icon">
-          <div>
-            <div class="title">I am a team member</div>
-            <div class="subtitle">I want to assess myself</div>
-          </div>
-        </div>
-      </button>
+     <!-- Team -->
+<a class="btn" href="./team/">
+  <span class="btn-grid">
+    <img class="icon" src="./icons/team.png" alt="Team member icon">
+    <span>
+      <span class="title">I am a team member</span>
+      <span class="subtitle">I want to assess myself</span>
+    </span>
+  </span>
+</a>
 
-      <!-- Peer -->
-      <button class="btn" onclick="location.href='./peer/';">
-        <div class="btn-grid">
-          <img class="icon" src="./icons/peer.png" alt="Peer reviewer icon">
-          <div>
-            <div class="title">I am a peer reviewer</div>
-            <div class="subtitle">I want to review my friend</div>
-          </div>
-        </div>
-      </button>
+<!-- Peer -->
+<a class="btn" href="./peer/">
+  <span class="btn-grid">
+    <img class="icon" src="./icons/peer.png" alt="Peer reviewer icon">
+    <span>
+      <span class="title">I am a peer reviewer</span>
+      <span class="subtitle">I want to review my friend</span>
+    </span>
+  </span>
+</a>
 
       <!-- Install App -->
       <button id="btnInstall" style="display:none; width:200px; margin-top:20px;">
