--- a/index.html
+++ b/index.html
@@ -87,11 +87,23 @@
   </span>
 </a>
 
-      <!-- Install App -->
-      <button id="btnInstall" style="display:none; width:200px; margin-top:20px;">
-        Add to Home Screen
-      </button>
-    </section>
+  <!-- Team button -->
+<a class="btn" href="./team/">…</a>
+
+<!-- Peer button -->
+<a class="btn" href="./peer/">…</a>
+
+<!-- Install App + Explanatory text -->
+<button id="btnInstall" style="...">
+  + Add to Home Screen
+</button>
+
+<p style="font-size:13px; color:#666; margin-top:8px; line-height:1.4; text-align:center;">
+  When you install the BED 2.0 App, you can return anytime and continue your self-assessment
+  without losing your data.
+</p>
+</section>
+
   </main>
 </body>
 </html>
