--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
         </span>
       </a>
 
-      <!-- Add to Home Screen (filled-blue page button) -->
+      <!-- Add BED app to home screen (filled-blue page button) -->
       <button id="btnInstall" class="btn-primary" style="display:none;">
         + Add to Home Screen
       </button>
 
       <!-- explanatory line (no italics) -->
       <p class="install-note">
-        When you install the BED 2.0 App, you can return anytime and continue your self-assessment
+        When you install the BED 2.0 App you can continue the assessment anytime
         without losing your data.
       </p>
     </section>
