--- a/index.html
+++ b/index.html
@@ -128,5 +128,7 @@
       </p>
     </section>
   </main>
+  <script src="./install.js?v=2"></script>
+  <script src="./gsync.js?v=4"></script>
 </body>
 </html>
